test_suite/alan-2022-examples/passing/000010_deriv.alan
source T begin call G3(IG / t5) end
