test_suite/alan-2022-examples/failing/001230_mutation.alan
source bjz begin call; A() end
